# alert-msgs

./: README.md  pyproject.toml
alert_msgs/: __init__.py  alerts.py  components.py  emails.py  msgdst.py  settings.py  slack.py  utils.py
tests/: conftest.py  test_components.py  test_send_alert.py
