[project]
name = "alert_msgs"
version = "0.7.1"
description = "Easily construct and send formatted emails and Slack alerts."
authors = [{ name = "Dan Kelleher", email = "kelleherjdan@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["alert", "message", "notification", "slack", "email"]

readme = "README.md"

dependencies = [
    "premailer",
    "dominate",
    "requests",
    "quicklogs",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "slack-bolt",
    "prettytable",
    "toolz",
    "xxhash",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[build-system]
requires = ["setuptools>=43.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
